--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
 				})(this);
 		</script>
 		
-    <title data-res="trust">小牛趣拍</title>
+    <title data-res="trust">果园魔术师</title>
 </head>
 
 <style type="text/css" data-res="trust"> 
